<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_best_popular_films_and_serials">BEST POPULAR MOVIES AND SERIES</string>
    <string name="lbl_check_movie_n_show_time">Check Movie\nShow Time</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_showcases">SHOWCASES</string>
    <string name="lbl_showcase_movie2">ARCANE</string>
    <string name="lbl_showcas_movie_date">April 4 2021</string>
    <string name="lbl_best_actor">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_storyline">STORYLINE</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_play_trailer">PLAY TRAILER</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title">Original Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_production">Production</string>
    <string name="lbl_premiere">Premiere</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_about_film">ABOUT FILM</string>
    <string name="lbl_description_text"><![CDATA[Dustin and friends investigate and discover that the murders were by an entity they dub Vecna (a D&D villain), a powerful being that lives in the Upside Down. The second plotline involves Mike visiting Eleven, Will, and Jonathan at their new home in California]]></string>
</resources>